# ImageSequence

./: INSTALL.md  sanity_check.py
Include/libImageSequence/: imageElement.hpp  scanDir.hpp
src/libImageSequence/: imageElement.cpp  scanDir.cpp
src/python/: CMakeLists.txt  pyModule.cpp
tests/: imageElementTest.cpp
